--- a/cuidados/src/components/carouselEjemplo/style.css
+++ b/cuidados/src/components/carouselEjemplo/style.css
@@ -1,10 +1,27 @@
-.carousel__style{
+.carousel__style {
     align-self: center;
     width: 60%;
-    height: 50%;
     margin-top: 10px;
-    -webkit-box-shadow: 0px 2px 7px 1px rgba(0,0,0,0.31); 
-    box-shadow: 0px 2px 7px 1px rgba(0,0,0,0.31);
+    -webkit-box-shadow: 0px 2px 7px 1px rgba(0, 0, 0, 0.31);
+    box-shadow: 0px 2px 7px 1px rgba(0, 0, 0, 0.31);
     border-radius: 2%;
+    margin-bottom: 20px;
+}
 
+.carousel__style--wrapper {
+    min-height: 800px;
+}
+
+.card__style {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.card__style--text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: stretch;
 }
