falta contexto para rutas privadas y theming

--- a/cuidados/src/components/carouselEjemplo/style.css
+++ b/cuidados/src/components/carouselEjemplo/style.css
@@ -17,6 +17,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    min-height: 400px;
 }
 
 .card__style--text {
