feat:redirect aplicado / fix:Login

--- a/cuidados/src/App.css
+++ b/cuidados/src/App.css
@@ -3,7 +3,17 @@
 
 }
 
-.linkMenu__style{
-   text-decoration:none;
+:link{
+   text-decoration: none;
+
+}
+
+a{
+   color: white;
+}
+
+
+.collapsed__link__style{
+   color: grey;
 }
 
