--- a/cuidados/src/components/carouselEjemplo/style.css
+++ b/cuidados/src/components/carouselEjemplo/style.css
@@ -1,28 +1,16 @@
 .carousel__style {
-    align-self: center;
-    width: 70%;
-
-    -webkit-box-shadow: 0px 2px 7px 1px rgba(0, 0, 0, 0.31);
-    box-shadow: 0px 2px 7px 1px rgba(0, 0, 0, 0.31);
+    -webkit-box-shadow: 0px 2px 2px 2px rgba(0, 0, 0, 0.31);
+    box-shadow: 0px 2px 2px 2px rgba(0, 0, 0, 0.31);
     border-radius: 2%;
 
 }
 
-.carousel__style--wrapper {
-    min-height: 800px;
-}
 
-.card__style {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    min-height: 400px;
-}
+.skeleton__styles {
+    min-height: 44vh;
+    max-width: 90vw;
+    -webkit-box-shadow: 0px 2px 2px 1px rgba(0, 0, 0, 0.31);
+    box-shadow: 0px 2px 2px 1px rgba(0, 0, 0, 0.31);
+    border-radius: 2%;
 
-.card__style--text {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: stretch;
 }
