--- a/cuidados/src/components/carouselEjemplo/style.css
+++ b/cuidados/src/components/carouselEjemplo/style.css
@@ -2,6 +2,8 @@
     -webkit-box-shadow: 0px 2px 2px 2px rgba(0, 0, 0, 0.31);
     box-shadow: 0px 2px 2px 2px rgba(0, 0, 0, 0.31);
     border-radius: 2%;
+    background-image: url('../../pages/assets/handsMedium.jpg');
+    background-position: center;
 
 }
 
@@ -13,4 +15,8 @@
     box-shadow: 0px 2px 2px 1px rgba(0, 0, 0, 0.31);
     border-radius: 2%;
 
+}
+
+.carousel__style--alpha{
+    background-color: rgba(255, 255, 255, 0.601);
 }
